@@ -54,7 +54,7 @@ repositories {
 
 dependencies {
     compile fileTree(dir:"biblioteca", include:["*.jar"])
-    compile "com.joseflavio:iperoxo:1.0-A10"
+    compile "com.joseflavio:iperoxo:1.0-A11"
     compile "org.apache.tomcat:tomcat-catalina:8.5.11"
     compile "org.apache.geronimo.specs:geronimo-osgi-locator:1.1"
     compile "org.eclipse.persistence:eclipselink:2.6.4"
@@ -87,7 +87,8 @@ task distExe << {
     def comando = new File( "build/exe/iperoxo.sh" )
     def nomeJar = archivesBaseName + "-" + version + ".jar"
     comando << "#!/bin/sh\n\n"
-    comando << "java -server "
+    comando << "java -server -XX:+UseConcMarkSweepGC -XX:+TieredCompilation "
+    comando << "-XX:+AggressiveOpts -XX:+UseBiasedLocking "
     comando << "-jar $nomeJar \"\$@\"\n"
 }
 
